app_example.ini update

--- a/app_example.ini
+++ b/app_example.ini
@@ -1,7 +1,7 @@
 [CLIENT]
 CLIENT_ID=[SPOTIFY_APP_CLIENT_ID]
 CLIENT_SECRET=[SPOTIFY_APP_CLIENT_SECRET]
-# Example of needed scope for the application, spotify endpoints indicates which ones are needed
+# Example of the needed scope for this application, spotify endpoints indicates which ones are needed
 SCOPE=user-library-read user-read-email user-read-private
 [SERVER]
 HOST=127.0.0.1
