--- a/app_example.ini
+++ b/app_example.ini
@@ -2,7 +2,7 @@
 CLIENT_ID=[SPOTIFY_APP_CLIENT_ID]
 CLIENT_SECRET=[SPOTIFY_APP_CLIENT_SECRET]
 # Example of the needed scope for this application, Spotify documentation indicates the scope of each endpoint
-SCOPE=user-library-read user-read-email user-read-private
+SCOPE=user-library-read user-read-email user-read-private user-read-playback-state user-modify-playback-state
 [SERVER]
 HOST=127.0.0.1
 PORT=5000
